[package]
name = "redis-cache-test"
version = "0.1.0"
edition = "2021"

[dependencies]
rbs = { version = "0.1" }
rbatis = { version = "4" }
rbdc-mysql = { version = "0.1" }

#rbatis orm dep must use async-std(Because actix-web relies on tokio0.2)
tokio = { version = "1", features = ["full"] }

#serde and json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

#log
log = "0.4"

#fast_log enable features = ["lz4", "zip", "gzip"]
fast_log = { version = "1.5", features = [] }

#redis
redis = { version = "0.21", features = ["tokio-comp"] }